--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ resources.tar
 ./draw_traj(temp)/
 .vscode
 *.ui
+./model/Detection/Mask/build/
+./model/Detection/Mask/dist
+./model/Detection/Mask/dist_rcnn.egg-info
